# tfe23-2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: cmake-single-platform.yml
cmake/: StaticAnalyzers.cmake
exercise-001/: CMakeLists.txt  README.md  main.cpp
exercise-002/: CMakeLists.txt  README.md  main.cpp
exercise-003/: CMakeLists.txt  main.cpp  myvector.cpp  myvector.hpp
exercise-004/: CMakeLists.txt  README.md  config.h.in  myvector.cpp  myvector.hpp
exercise-005/: CMakeLists.txt  main.cpp
templates/: CMakeLists.txt
templates/catch2/: CMakeLists.txt  main.cpp
templates/catch2/tests/: 000-Main.cpp  001-TestCase.cpp  CMakeLists.txt
templates/json_parsing/: CMakeLists.txt  main.cpp
templates/version_info/: CMakeLists.txt  main.cpp
testat/: CMakeLists.txt  Readme.md  main.cpp
